# yolov12

./: README.md  pyproject.toml
